# oop_labs

./: .gitignore
laba1/: CMakeLists.txt
laba1/include/: func.h
laba1/src/: func.cpp  main.cpp
laba1/tests/: test.cpp
